apps/prowlarr/base/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      volumes:
        - name: config
          nfs:
            path: "/k8s-volumes/persistent/prowlarr/config"
            server: 192.168.1.2
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:1.9.4.4039-ls40
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "8Gi"
              cpu: "4"
          readinessProbe:
            httpGet:
              port: 9696
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: 9696
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 20
          ports:
            - containerPort: 9696
              name: web
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
