apps/prowlarr/base/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  serviceName: prowlarr
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      volumes:
        - name: config
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/persistent/prowlarr/config"
            server: 10.10.20.10
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:2.6.5.5623-ls163@sha256:f9151e5bc1025c6d0a630d503210cdcb6bb55a7cc098562609d96a408d838902
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "8Gi"
              cpu: "4"
          readinessProbe:
            httpGet:
              port: 9696
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: 9696
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 20
          ports:
            - containerPort: 9696
              name: web
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
