apps/prowlarr/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
    - name: web
      protocol: TCP
      port: 9696
      targetPort: 9696
