apps/prowlarr/base/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-https
spec:
  hostnames:
    - prowlarr.nahue.ar
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: prowlarr
      namespace: prowlarr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: prowlarr
          port: 9696
          weight: 1
